# C4-Neural

./: .gitignore  CMakeLists.txt  README.md  c.sh
include/: Board.hpp  Game.hpp  HumanPlayer.hpp  IPlayer.hpp  InputHandler.hpp  RandomPlayer.hpp  Render.hpp
src/: Board.cpp  Game.cpp  HumanPlayer.cpp  InputHandler.cpp  RandomPlayer.cpp  Render.cpp  main.cpp
src/Player/: HumanPlayer.cpp  RandomPlayer.cpp
